[tool.poetry]
name = "img2html"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
img2html = "img2html.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python-headless = "*"
Pillow = "*"
beautifulsoup4 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
